src/test/ui/intrinsics-always-extern.ds
#![feature(intrinsics)]

trait Foo {
    extern "dust-intrinsic" fn foo(&self); //~ ERROR intrinsic must
}

impl Foo for () {
    extern "dust-intrinsic" fn foo(&self) { //~ ERROR intrinsic must
    }
}

extern "dust-intrinsic" fn hello() {//~ ERROR intrinsic must
}

fn main() {
}
